--- a/src/routes/rblxapp/routes/res/rowaPlr.html
+++ b/src/routes/rblxapp/routes/res/rowaPlr.html
@@ -16,7 +16,6 @@
 
     html,
     body {
-      height: 100%;
       margin: 0;
       background: linear-gradient(342deg, var(--bg), #2a2a2a);
       color: #e6eef6;
@@ -219,11 +218,22 @@
       padding: 8px;
       border-radius: 6px;
       background: linear-gradient(180deg, rgba(255,255,255,0.005), transparent);
-      border: 1px solid rgba(255,255,255,0.02);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     .combat-item .k { color: var(--muted); font-size: 12px }
     .combat-item .v { font-size:12px }
+
+    .small-p {
+      font-size: .75rem;
+      line-height: 1rem;
+      color: #585858;
+      display: flex;
+      justify-content: center;
+      padding: 20px;
+    }
 
     @media(max-width:880px) {
       .combat-grid { grid-template-columns: 1fr }
@@ -282,17 +292,12 @@
           <div style="margin-bottom:12px">
             <div class="sm">Meta</div>
             <div style="padding:12px;margin-top:8px;border-radius:8px;background:rgba(255,255,255,0.02);">
-              <div class="sm">First seen</div>
-              <div id="metaFirst" class="value">—</div>
-
-              <div class="sm" style="margin-top:8px">Last seen</div>
-              <div id="metaLast" class="value">—</div>
-
-              <div class="sm" id="playtime" style="margin-top:8px">Total playtime —</div>
-
-              <div class="sm" style="margin-top:8px">Followed IDs</div>
+              <div class="sm" id="firstseen" >First seen</div>
+              <div class="sm" id="lastseen"  >Last seen</div>
+              <div class="sm" id="playtime"  >Total playtime -</div>
+              <div class="sm" >Followed IDs</div>
               <div id="followedWrap" style="padding-top:6px">
-                <div id="followedList" class="sm">—</div>
+                <div id="followedList" class="sm">-</div>
               </div>
             </div>
           </div>
@@ -317,7 +322,7 @@
       </main>
     </div>
   </div>
-
+  <p class="small-p">© 2024 Airzy Turqueza.</p>
   <script>
     (async function () {
       const segments = location.pathname.split('/').filter(Boolean);
@@ -327,9 +332,6 @@
       const sub = document.getElementById('sub');
       const stats = document.getElementById('stats');
       const slots = document.getElementById('slots');
-      const metaF = document.getElementById('metaFirst');
-      const metaL = document.getElementById('metaLast');
-      const play = document.getElementById('playtime');
       const followedList = document.getElementById('followedList');
       const kb = document.getElementById('kbPre');
       const touch = document.getElementById('touchPre');
@@ -600,18 +602,22 @@
         //+ stat('SEED', esc(seed));
 
         // Meta
+        const firstseen = document.getElementById('firstseen');
+        const lastseen = document.getElementById('lastseen');
+              const play = document.getElementById('playtime');
+
         const plrMeta = plrData.meta || {};
         const firstJoined = plrMeta.first ? fmtDate(plrMeta.first) : '-';
         const lastPlayed = plrMeta.last ? fmtDate(plrMeta.last) : '-';
-        metaF.textContent = firstJoined;
-        metaL.textContent = lastPlayed;
-        play.textContent = 'plrSeed - ' + esc(seed)//'Total playtime - ' + fmtPlay(plrMeta.totalPlaytime || 0);
+        firstseen.textContent = 'firstSeen: ' + firstJoined;
+        lastseen.textContent  = 'lastSeen: ' + lastPlayed;
+        play.textContent      = 'plrSeed: ' + esc(seed)//'Total playtime - ' + fmtPlay(plrMeta.totalPlaytime || 0);
 
         // followedIds display (robust: accepts array, object or single number)
         try {
           const raw = plrMeta.followedIds;
           if (!raw) {
-            followedList.textContent = '—';
+            followedList.textContent = '-';
           } else {
             let arr = [];
             if (Array.isArray(raw)) {
@@ -797,7 +803,7 @@
 
               const color = sharedColors[idxColorKey[i]] || 'linear-gradient(90deg,var(--accent),#79b8ff)';
 
-              item.innerHTML = `\n                <div class="k">${esc(lab)}</div>\n                <div style="display:flex;align-items:center;justify-content:space-between;margin-top:6px">\n                  <div class="v">${fmtN(count)} (${fmtN(dmg)} dmg)</div>\n                  <div style="font-weight:800;font-size:15px;margin-left:8px">${pct ? pct.toFixed(1) + '%' : '—'}</div>\n                </div>\n                <div style="height:10px;background:rgba(255,255,255,0.03);border-radius:8px;margin-top:8px;overflow:hidden">\n                  <div style="height:100%;width:${pct.toFixed(2)}%;background:${color};transition:width .4s ease"></div>\n                </div>\n              `;
+              item.innerHTML = `\n                <div class="k">${esc(lab)}</div>\n                <div style="display:flex;align-items:center;justify-content:space-between">\n                  <div class="v">${fmtN(count)} (${fmtN(dmg)} dmg)</div>\n                  <div style="font-size:12px;margin-left:8px">${pct ? pct.toFixed(1) + '%' : '—'}</div>\n                </div>\n                <div style="height:10px;width:100%;background:rgba(255,255,255,0.03);border-radius:8px;margin-top:8px;overflow:hidden">\n                  <div style="height:100%;width:${pct.toFixed(2)}%;background:${color};transition:width .4s ease"></div>\n                </div>\n              `;
 
             // Damage Dealt special case (outgoing success)
             } else if (i === 7) {
@@ -807,7 +813,7 @@
               const pct = totalOutgoing ? (dmg / totalOutgoing * 100) : 0;
               const color = sharedColors[idxColorKey[i]] || 'linear-gradient(90deg,var(--accent),#79b8ff)';
 
-              item.innerHTML = `\n                <div class="k">${esc(lab)}</div>\n                <div style="display:flex;align-items:center;justify-content:space-between;margin-top:6px">\n                  <div class="v">${fmtN(count)} (${fmtN(dmg)} dmg)</div>\n                  <div style="font-weight:800;font-size:15px;margin-left:8px">${pct ? pct.toFixed(1) + '%' : '—'}</div>\n                </div>\n                <div style="height:10px;background:rgba(255,255,255,0.03);border-radius:8px;margin-top:8px;overflow:hidden">\n                  <div style="height:100%;width:${pct.toFixed(2)}%;background:${color};transition:width .4s ease"></div>\n                </div>\n              `;
+              item.innerHTML = `\n                <div class="k">${esc(lab)}</div>\n                <div style="display:flex;align-items:center;justify-content:space-between;margin-top:6px">\n                  <div class="v">${fmtN(count)} (${fmtN(dmg)} dmg)</div>\n                  <div style="font-size:12px;margin-left:8px">${pct ? pct.toFixed(1) + '%' : '—'}</div>\n                </div>\n                <div style="height:10px;width:100%;background:rgba(255,255,255,0.03);border-radius:8px;margin-top:8px;overflow:hidden">\n                  <div style="height:100%;width:${pct.toFixed(2)}%;background:${color};transition:width .4s ease"></div>\n                </div>\n              `;
 
             // Outgoing indices: same treatment but use outgoing totals and mapped colors
             } else if (outgoingIdx.includes(i)) {
@@ -817,7 +823,7 @@
               const pct = totalOutgoing ? (dmg / totalOutgoing * 100) : 0;
               const color = sharedColors[idxColorKey[i]] || 'linear-gradient(90deg,#9dd3ff,#60a5fa)';
 
-              item.innerHTML = `\n                <div class="k">${esc(lab)}</div>\n                <div style="display:flex;align-items:center;justify-content:space-between;margin-top:6px">\n                  <div class="v">${fmtN(count)} (${fmtN(dmg)} dmg)</div>\n                  <div style="font-weight:800;font-size:15px;margin-left:8px">${pct ? pct.toFixed(1) + '%' : '—'}</div>\n                </div>\n                <div style="height:10px;background:rgba(255,255,255,0.03);border-radius:8px;margin-top:8px;overflow:hidden">\n                  <div style="height:100%;width:${pct.toFixed(2)}%;background:${color};transition:width .4s ease"></div>\n                </div>\n              `;
+              item.innerHTML = `\n                <div class="k">${esc(lab)}</div>\n                <div style="display:flex;align-items:center;justify-content:space-between;margin-top:6px">\n                  <div class="v">${fmtN(count)} (${fmtN(dmg)} dmg)</div>\n                  <div style="font-size:12px;margin-left:8px">${pct ? pct.toFixed(1) + '%' : '—'}</div>\n                </div>\n                <div style="height:10px;width:100%;background:rgba(255,255,255,0.03);border-radius:8px;margin-top:8px;overflow:hidden">\n                  <div style="height:100%;width:${pct.toFixed(2)}%;background:${color};transition:width .4s ease"></div>\n                </div>\n              `;
 
             // single-number feints or unknowns
             } else if (typeof v === 'number') {
