--- a/src/routes/rblxapp/routes/res/rowaPlr.html
+++ b/src/routes/rblxapp/routes/res/rowaPlr.html
@@ -651,7 +651,7 @@
         }
 
         if (plrMeta.totalPlaytime) {
-          statInnerHTML += stat('PlAYTIME', fmtPlay(plrMeta.totalPlaytime || 0));
+          statInnerHTML += stat('PLAYTIME', fmtPlay(plrMeta.totalPlaytime || 0));
         }
 
         if (plrMeta.clientInfo) {
